# ohtupalautus

./: README.md
viikko1/: .gitignore
viikko1/nhl-statistics-1/src/: statistics_service.py
viikko1/nhl-statistics-1/src/tests/: statistics_service_test.py
viikko2/git-branch-harjoitus/: README.md  index.py
viikko2/nhl-reader/src/: index.py  player.py  player_stats.py  player_table.py
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/src/: project.py  project_reader.py
