[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["Kallipex <148634945+Kallipex@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
